deploy/kubernetes/base/service-two-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-two
  labels:
    app.kubernetes.io: service-two

spec:
  selector:
    matchLabels:
      app: service-two
  replicas: 3
  minReadySeconds: 7
  strategy:
    # indicate which strategy we want for rolling update
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 5
      maxUnavailable: 2

  # only keep last n revisions in history
  revisionHistoryLimit: 8

  template:
    metadata:
      labels:
        app: service-two

    spec:
      serviceAccountName: sa-load-testing
      restartPolicy: Always

      containers:
        - name: http-echo
          image: hashicorp/http-echo:0.2.3
          args: ["-text", "bar", "-listen", ":5679"]
          imagePullPolicy: Always
          ports:
            - containerPort: 5679
              name: "http"
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 5679
            initialDelaySeconds: 5
            periodSeconds: 30
            failureThreshold: 5
