deploy/kubernetes/base/app-one-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app-one
  labels:
    app: app-one
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: "http"
      targetPort: 5678
  selector:
    app: app-one
