deploy/kubernetes/base/app-two-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app-two
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: "http"
      targetPort: 5679
  selector:
    app: app-two
